clang/test/BSC/Negative/Method/Enum/enum_instance_function_not_found/enum_instance_function_not_found.cbs
// RUN: %clang_cc1 -verify %s

enum E {
    X3,
    X4
};

int enum E::getA(enum E* this) { 
  return X4;
}

int main() {
  enum E foo = X3; 
  foo.getB(); // expected-error {{no member named 'getB' in 'enum E'}}
  return 0;
}